share/cascade/test/regression/type_check/fail/issue_60b.v
wire x;
initial begin
  $display("Too few args %d %d %d", x);
  $finish;
end
